[package]
name = "red_king_ghost"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "sysinfoapi"] }
sysinfo = "0.29"
whoami = "1.4"
uuid = { version = "1.4", features = ["v4"] }
rand = "0.8"
socket2 = "0.5" # Low-level networking for P2P
# For evasion techniques later
# indirect_syscall = "0.1" 

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
strip = true        # Strip symbols
panic = "abort"     # Abort on panic (smaller binary)
